--- a/IND/.gitattributes
+++ b/IND/.gitattributes
@@ -1,2 +1,3 @@
 raw.zip filter=lfs diff=lfs merge=lfs -text
 test_data.zip filter=lfs diff=lfs merge=lfs -text
+test_feature.zip filter=lfs diff=lfs merge=lfs -text
